<resources>
    <string name="app_name">Room Sqlite3</string>
    <string name="name">name</string>
    <string name="surname">surname</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">title</string>
    <string name="message">message</string>
    <string name="messageadd">Message</string>
    <string name="titleadd">Title</string>
    <string name="notes">Notes</string>
    <string name="adddata">addData</string>
    <string name="add_data">AddData</string>
</resources>