<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9E009688"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AddFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="20dp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:background="#A4FF0051"
            android:padding="10dp">

            <EditText
                android:id="@+id/title"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:minWidth="100dp"
                android:background="@drawable/more"
                android:hint="@string/titleadd"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="70dp"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title">

                <EditText
                    android:id="@+id/message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/more"
                    android:gravity="fill_horizontal"
                    android:hint="@string/messageadd"
                    android:maxHeight="200dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="30dp"
                    android:paddingVertical="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/delAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="9dp"
                    android:background="#00FFFFFF"
                    android:src="@drawable/baseline_close_24"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="@+id/message"
                    app:layout_constraintEnd_toEndOf="@+id/message" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingVertical="5dp"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="5dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="@drawable/more"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" >
                <TextView
                    android:id="@+id/C1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/color"
                    android:backgroundTint="@color/C1"/>
                <TextView
                    android:id="@+id/C2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/color"
                    android:backgroundTint="@color/C2"/>
                <TextView
                    android:id="@+id/C3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/color"
                    android:backgroundTint="@color/C3"/>
                <TextView
                    android:id="@+id/C4"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/color"
                    android:backgroundTint="@color/C4"/>
                <TextView
                    android:id="@+id/C5"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/color"
                    android:backgroundTint="@color/C5"/>
                <TextView
                    android:id="@+id/C6"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/color"
                    android:backgroundTint="@color/C6"/>
                <TextView
                    android:id="@+id/C7"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/color"
                    app:backgroundTint="@color/C7"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>